--- a/basic.html
+++ b/basic.html
@@ -60,5 +60,17 @@
         <div>vijay &#128516 </div>
         <div> prashant &#128517 </div>
 
+        <!--image , audio, video -->
+
+        <img src="ipl.jpg" height="360" width="360">
+        <br>
+        <audio controls="audio controls"  src="song.mp3"></audio>
+        <br>
+        <video src="mahashivratri1(PagalWorld.com.se).mp4" height="360" width="360"></video>
+        <br>
+       <video src="hanuman-status-017.mp4"></video>
+
+        
+
     </body>
 </html>
